--- a/app/views/saludo/index.html.erb
+++ b/app/views/saludo/index.html.erb
@@ -9,6 +9,8 @@
     <title>Hola mundo </title>
 </head>
 <body>
+<h1> HOLA MUNDOO</h1s>
+<hr>
 <img src = "https://cdn-images-1.medium.com/max/1600/1*jB76MLZjiNhGSQQvxm7LSQ.gif">
 <p>By:Juventino Perez   </p> 
 </body>
