--- a/app/views/saludo/saludos.html.erb
+++ b/app/views/saludo/saludos.html.erb
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hola mundo </title>
+    <title>Hola mundo  AGAIN</title>
 </head>
 <body>
 <h1> HOLA MUNDOO</h1s>
